--- a/student-store-ui/src/components/Navbar/Navbar.css
+++ b/student-store-ui/src/components/Navbar/Navbar.css
@@ -1,27 +1,62 @@
-.navbar {
+.nav-container {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
 	background-color: #2c3f47;
-	padding: 21px 20px;
+	padding: 12px 20px;
 	color: #fff;
 }
 
-.navbar-brand {
-	font-weight: bold;
-	font-size: 1.5rem;
-}
-
-.navbar-links {
+.nav-socials {
 	display: flex;
+	position: relative;
+	left: -170px;
 	gap: 20px;
 }
 
-.navbar-link {
+.nav-social-link {
 	color: #fff;
+	font-size: 20px;
+}
+
+.nav-links {
+	position: relative;
+	right: 100px;
+	margin-right: 8rem;
+	display: flex;
+	gap: 100px;
+	font-weight: bold;
+}
+
+.nav-link {
+	color: #fff;
+	font-size: 1rem;
 	text-decoration: none;
 }
 
-.navbar-link:hover {
+.nav-link:hover {
 	text-decoration: underline;
+}
+
+@media screen and (max-width: 1290px) {
+	.nav-container {
+		flex-direction: column;
+	}
+	.nav-socials {
+		position: relative;
+		left: 0px;
+	}
+	.nav-links {
+		position: relative;
+		right: 0;
+		margin-right: 0;
+		gap: 50px;
+	}
+}
+
+@media screen and (min-width: 1290px) and (max-width: 1512px) {
+	.nav-socials {
+		position: relative;
+		left: -60px;
+	}
 }
