--- a/student-store-ui/src/components/Home/Home.css
+++ b/student-store-ui/src/components/Home/Home.css
@@ -4,16 +4,52 @@
 	min-width: 500px;
 }
 
+.product-name-count {
+	display: flex;
+	justify-content: space-between;
+}
+
+.product-name-count p {
+	font-size: 1.1rem;
+	position: relative;
+	margin-left: 0.25rem;
+	top: -10px;
+}
+
+.product-name-count div {
+	display: flex;
+	position: relative;
+	gap: 10px;
+	top: 2px;
+	padding: 0.3rem;
+	margin-right: 0.5rem;
+}
+
+.sign {
+	font-size: 1.7rem;
+	padding: 0.3rem;
+	transition: 0.1s;
+	cursor: pointer;
+}
+
+.plus:hover {
+	color: green;
+}
+
+.minus:hover {
+	color: red;
+}
+
 .loading-spinner {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	height: 200px; /* Adjust the height as needed */
+	height: 200px;
 }
 
 .spinner {
 	animation: spin 1s infinite linear;
-	font-size: 3rem; /* Adjust the size as needed */
+	font-size: 3rem;
 }
 
 .product-grid {
@@ -23,16 +59,17 @@
 }
 
 .product-item {
-	flex: 0 0 calc(33.33% - 20px);
+	width: 240px;
+	object-fit: cover;
 	background-color: #fff;
 	border-radius: 4px;
-	padding: 20px;
 	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .product-item img {
-  width: 150px;
-  height: 150px;
+  width: 100%;
+  height: 70%;
+  object-fit: cover;
 }
 
 @keyframes spin {
