--- a/student-store-ui/src/components/Sidebar/Sidebar.css
+++ b/student-store-ui/src/components/Sidebar/Sidebar.css
@@ -54,6 +54,27 @@
 	font-size: 14px;
 }
 
+.sidebar-icons {
+	color: white;
+	cursor: pointer;
+	display: flex;
+	flex-direction: column;
+	position: relative;
+	right: -435px;
+	bottom: -100px;
+	transition: 0.15s;
+	gap: 20px;
+}
+
+.sidebar-icon {
+	width: 40px;
+	height: 40px;
+}
+
+.sidebar-icons.open {
+	scale: 0;
+}
+
 .sidebar-content {
 	margin-top: 16px;
 }
