--- a/student-store-ui/src/components/Home/Home.css
+++ b/student-store-ui/src/components/Home/Home.css
@@ -4,6 +4,10 @@
 	min-width: 500px;
 }
 
+.home h3 {
+	font-size: 1.5rem;
+}
+
 .product-name-count {
 	display: flex;
 	justify-content: space-between;
