className to h3 so it can have a margin top from the component above

--- a/student-store-ui/src/components/ProductGrid/ProductGrid.css
+++ b/student-store-ui/src/components/ProductGrid/ProductGrid.css
@@ -11,6 +11,10 @@
 	top: -10px;
 }
 
+.product-header {
+    margin-top: 6rem;
+}
+
 .product-name-count div {
 	display: flex;
 	position: relative;
