--- a/student-store-ui/src/components/Contact/Contact.css
+++ b/student-store-ui/src/components/Contact/Contact.css
@@ -57,6 +57,11 @@
     top: -15px;
 }
 
+.contact-icons {
+    display: flex;
+    gap: 10px;
+}
+
 @media screen and (max-width: 832px) {
     .contact-img {
         right: 100px;
