--- a/student-store-ui/src/components/About/About.css
+++ b/student-store-ui/src/components/About/About.css
@@ -35,3 +35,9 @@
     width: 150px;
     height: 150px;
   }
+
+  @media screen and (max-width: 700px) {
+    .about-container {
+        flex-direction: column;
+    }
+  }
