--- a/student-store-ui/src/components/Contact/Contact.css
+++ b/student-store-ui/src/components/Contact/Contact.css
@@ -68,3 +68,13 @@
         width: 300px;
     }
 }
+
+@media screen and (max-width: 940px) {
+    .contact-container {
+        flex-direction: column;
+    }
+
+    .contact-img {
+        display: none;
+    }
+}
