--- a/student-store-ui/src/components/ShoppingCart/ShoppingCart.css
+++ b/student-store-ui/src/components/ShoppingCart/ShoppingCart.css
@@ -5,13 +5,26 @@
 
 .cart-heading {
   color: white;
-  font-size: 24px;
-  margin-bottom: 10px;
+  margin-bottom: 1rem;
 }
 
 .cart-empty-message {
   font-style: italic;
   color: white;
+}
+
+.payment-wrapper {
+  display: flex;
+  justify-content: center;
+  margin-top: 1rem;
+  gap: 30px;
+}
+
+.payment-icon {
+  position: relative;
+  color: white;
+  font-size: 3rem;
+  top: 15px;
 }
 
 .cart-items-table {
