removeFromCart logic improved

--- a/student-store-ui/src/components/ProductDetail/ProductDetail.css
+++ b/student-store-ui/src/components/ProductDetail/ProductDetail.css
@@ -59,6 +59,13 @@
   display: flex;
   gap: 75px;
   cursor: pointer;
+  font-size: 2rem;
+}
+
+.pd-sign {
+  padding: 1.3rem;
+  transition: 0.2s;
+  border: 2px solid hsl(0, 0%, 80%);
 }
 
 .pd-price {
