ui showing which filter status user is on

--- a/student-store-ui/src/components/Search/Search.css
+++ b/student-store-ui/src/components/Search/Search.css
@@ -29,6 +29,10 @@
   cursor: pointer;
 }
 
+.selected {
+  background-color: gray;
+}
+
 .filter-categories {
   position: relative;
   display: flex;
