--- a/student-store-ui/src/components/Sidebar/Sidebar.css
+++ b/student-store-ui/src/components/Sidebar/Sidebar.css
@@ -22,6 +22,11 @@
 	overflow-y: scroll;
 }
 
+.purchase {
+	position: relative;
+	top: 50px;
+}
+
 .sidebar .toggle-btn {
 	margin-top: 8px;
 	padding: 8px;
